updated landing page text
Former-commit-id: dc1cd32fd3b7c002cc396ba3b837d92a22944aaf [formerly 3973ddea5e3a548b1a02efc00022823481646764] [formerly 9a3ecdbd9a919a9dfff872a4bb513b8361399a7c [formerly b45bc084788c958eed5f0d6a41dd1271a4e11590]]
Former-commit-id: e26b74e6f520bb4f7fc1b72fd2611a27d4bebd9f [formerly 2bed928d1a687481a05a02a97b74660a0f974535]
Former-commit-id: 2ecf0003bd7a9de1a07aa37bc6712678d92e18c6

--- a/templates/live/welcome.html
+++ b/templates/live/welcome.html
@@ -393,26 +393,26 @@
                     <div class="col-lg-3">
 
                         <span class="typcn typcn-group-outline"><span>
-                        <h3>Increase customer base</h3>
-                        <p>Grow your business, by capturing leads and contacts from Twitter, Linkedin, Gmail, and stay informed with their needs.<a href="http://iogrow.nerdroid.com/"> </a></p>
+                        <h3>Grow your network</h3>
+                        <p>Add contacts right from Linkedin , Gmail and Twitter and stay up to date on what's happening with them.<a href="http://iogrow.nerdroid.com/"> </a></p>
                     </div>
                     <div class="col-lg-3">
 
                         <span class="typcn typcn-star-outline"><span>
                         <h3>Easy to Use</h3>
-                        <p>There is no learning curve to follow, we simplify the experience for you, so you can focus on what matters, Your Customers.</p>
+                        <p>There is no learning curve to follow, we simplify the experience for you so you can focus on what matters, your relationships.</p>
                     </div>
                     <div class="col-lg-3">
                         <span class="typcn typcn-lock-closed-outline"><span>
 
-                        <h3>Secure & scalable</h3>
-                        <p>Our core solution is built on top of the same secured, scalable and powerful infrastracture that powers Google Search.</p>
+                        <h3>Privacy & scalability first</h3>
+                        <p>We'll never share your contacts, our core solution is built on top of the same secured, scalable infrastructure that powers Google search</p>
                     </div>
                     <div class="col-lg-3">
                         <span class="typcn typcn-weather-cloudy"><span>
 
-                        <h3>CRM on Google Apps</h3>
-                        <p>We are fully integrated with Google Apps, from Calendar, Drive to Gmail. Boost your growth using the tools you already know and love.</p>
+                        <h3>Google Apps integration</h3>
+                        <p>We are fully integrated with Google Apps from Calender, Drive to Gmail. boost your network using the tools you already know and love</p>
                     </div>
                 </div>
                 <br>
@@ -425,7 +425,7 @@
         <div id="featureswrap">
             <div class="container">
                 <div class="row">
-                    <h2 class="text-center">Capture Leads</h2>
+                    <h2 class="text-center">Capture potential contacts</h2>
                     <hr>
                     <br>
                     <br>
@@ -452,9 +452,8 @@
                                 </div><!-- /accordion-heading -->
                                 <div id="collapseOne" class="accordion-body collapse in">
                                     <div class="accordion-inner">
-                                    <p style="width: 400px;">If you are looking to build a potential lead base, it's not just a matter of adding them manually, you can do better!
-                                     <br>
-                                     Use the free Google Chrome extension that allows you to add leads right from Linkedin, Twitter and Gmail automatically using one click. Keep the experience you know and connect with the people you need.</p>
+                                    <p style="width: 400px;">If you are looking to build a potential network of contacts, it's not just a matter of adding them manually, you can do better!
+                                    Use the free Google Chrome extension that allows you to add people right from Linkedin, Twitter and Gmail in one click. Keep the experience you know and connect with the people you need.</p>
                                     </div><!-- /accordion-inner -->
                                 </div><!-- /collapse -->
                             </div><!-- /accordion-group -->
@@ -470,9 +469,8 @@
                     <div class="col-lg-6">
                         <br><br>
                         <h4><i class=" "></i>  </h4>
-                        <p style="width: 422px;margin-left: 120px;">When you are on a call with a customer, you can instantly access his profile for a detailed look at his information and your common interactions such as notes, tasks, opportunities, and cases.
-                        <br>
-                        So you can make each conversation more personal and productive.
+                        <p style="width: 422px;margin-left: 120px;">When you're calling someone on your contact list, you can instantly access his profile for a detailed look at his information and your common interactions such as notes and tasks.
+                        So that you can make each conversation more personal and productive.
                         </p>
                         <br><br>
                     </div>
@@ -517,10 +515,7 @@
                                 </div><!-- /accordion-heading -->
                                 <div id="collapseOne" class="accordion-body collapse in">
                                     <div class="accordion-inner">
-                                    <p style="width: 400px;"> You don’t need a CRM that fights you, you need a CRM that just works!
-                                    <br>
-                                    We’ve cut the clutter out to provide a clean, fast easy to use CRM without unnecessary complexities.
-                                    Organize all of your company’s contacts, opportunities, leads, tasks and more, and share them with the appropriate teams without redundancy and confusion.</p>
+                                    <p style="width: 400px;"> We’ve cut the clutter out to provide a clean tool without unnecessary complexities. Organize all of your contacts and tasks, share them with the appropriate people without redundancy and confusion.</p>
                                     </div><!-- /accordion-inner -->
                                 </div><!-- /collapse -->
                             </div><!-- /accordion-group -->
@@ -536,9 +531,8 @@
                     <hr><br><br>
                     <div class="col-lg-6">
                         <br><br>
-                        <p style="width: 422px;margin-left: 120px;">Stop wasting time struggling with spreadsheets, forms, or emails and start focusing on growing your business.
-<br>
-A clean, simple interface that collect all your customer's data, can dramatically saves you time and increase your sales productivity.
+                        <p style="width: 422px;margin-left: 120px;">Stop wasting time struggling with spreadsheets, forms, or emails and start focusing on growing your network.
+                        A clean, simple interface that collects all your contacts' data, can dramatically saves you time and increase your productivity
                         </p>
                         <br><br>
                     </div>
