hidding some text on mobile for landing page
Former-commit-id: 70bc3b0cb6b6ed0b9fc9c5f1c0fff591774d4a44 [formerly cb3a51dc0c941973930c62a661ba68b2b50e58b7] [formerly 436e7decb324185e688c9256388125d0acc39f3a [formerly 3af0571c17f1910f1f53ae04796d047c0837cbaa]]
Former-commit-id: 746496910ec79d9bacefa017edae961327256f59 [formerly 25f4d719dc2a7cb9c9a5d824f418cee17e1a1e62]
Former-commit-id: 21bc9af3f7690232f52c01a25243777e3d66f7b6

--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -136,12 +136,14 @@
                   <!-- <li class="ng-tab md-menu" ng-class="{active: selectedTab == 4}">
                     <a ng-click="selectedTab = 4;">Needs</a>
                   </li> -->
+                  {% if is_business_user %}
                   <li class="ng-tab md-menu" ng-class="{active: selectedTab == 5}">
                     <a ng-click="waterfallTrigger();selectedTab = 5;">Opportunities</a>
                   </li>
                   <li class="ng-tab md-menu" ng-class="{active: selectedTab == 6}">
                     <a ng-click="waterfallTrigger();selectedTab = 6;">Cases</a>
                   </li>
+                  {%endif%}
                   <li class="dropdown md-menu-inv">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                       More <i class="fa fa-angle-down"></i>
@@ -151,8 +153,10 @@
                       <li class="ng-tab sm-menu-inv" ng-class="{active: selectedTab == 3}"><a ng-click="selectedTab = 3;">Contacts</a></li>
                       <li class="ng-tab sm-menu-inv" ng-class="{active: selectedTab == 7}"><a ng-click="selectedTab = 7;">Attach Documents</a>
                       <li class="ng-tab md-menu-inv" ng-class="{active: selectedTab == 4}"><a ng-click="selectedTab = 4;">Needs</a></li>
+                      {% if is_business_user %}
                       <li class="ng-tab md-menu-inv" ng-class="{active: selectedTab == 5}"><a ng-click="selectedTab = 5;">Opportunities</a></li>
                       <li class="ng-tab md-menu-inv" ng-class="{active: selectedTab == 6}"><a ng-click="selectedTab = 6;">Cases</a></li>
+                      {%endif%}
                     </ul>
                   </li>
                 </ul>
@@ -370,7 +374,7 @@
                         <div class="news-blocks blank-card blank-card-red newsCard">
                           <h3>Story</h3>
                           <div class="news-block-tags">
-                
+
                          <div class="form-group row">
                             <label class="control-label col-md-4">Tagline</label>
                              <div class="col-md-8">
@@ -380,7 +384,7 @@
                            </div>
 
                           <div class="news-block-tags">
-                 
+
                             <div class="form-group row">
                                <label class="control-label col-md-4">Introduction</label>
                              <div class="col-md-8">
