--- a/templates/live/welcome.html
+++ b/templates/live/welcome.html
@@ -365,7 +365,7 @@
                             </div>
                           </div>
                         <h1>The next generation of Google Contacts</b></h1>
-                        <h3><b>Grow and Manage your relationships with the right people!</b></h3>
+                        <h3 class="hidden-xs"><b>Grow and Manage your relationships with the right people!</b></h3>
                         <br>
                     </div>
 
@@ -463,7 +463,7 @@
                         </div><!-- /accordion -->
                     </div>
                 </div><!-- /row -->
-               
+
                 <div class="row margin-bottom-30">
                     <h2 class="text-center">Instant Access</h2>
                     <hr class="margin-bottom-30">
