Add link to create a new google account on the sign-in Page #542
Former-commit-id: 24661cdfef2cddf356c5b601f55b1998e9e3db8f [formerly 05f089accc4173b298c81b9663af20dc69a92bec] [formerly 682bce694f5b1fea80bbe76591a61c663c2b9198 [formerly c72747fe67e465f54cfbb51c098117ebe4d69d08]]
Former-commit-id: e9b648024993678c6679c907b56fd170134169d3 [formerly e75057b9b17a2b043e1322ce88ac9db44d9da279]
Former-commit-id: 071ca880ebdaa5111ee0c03d3e6db85f820d7f43

--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -1082,7 +1082,7 @@ function onSignInCallback(authResult) {
   It's on Google and it just works!
 </h1>
   <h2 class="hidden-small">
-  One Google Account for everything Google
+    Sign in to continue to ioGrow
   </h2>
 </div>
 <div class="card signin-card clearfix">
@@ -1106,12 +1106,14 @@ function onSignInCallback(authResult) {
 </div>
 <div class="one-google">
   <p class="create-account">
-
-  <a href="http://www.google.com/support/accounts?hl=en" target="_blank">
-  Need help?
+  <a id="link-signup" href="https://accounts.google.com/SignUp?service=wise&amp;continue=https%3A%2F%2Fdrive.google.com%2F%23&amp;ltmpl=drive">
+  Create Google account
   </a>
   </p>
-
+<p class="tagline">
+  One Google Account for everything Google
+</p>
+<img src="//ssl.gstatic.com/accounts/ui/logo_strip_2x.png" width="210" height="17" alt="">
 </div>
 <div id="loading" style="display:none;" >
                           <center><img src="/static/img/google_loading.gif"  style="height:30px; width:30px;">
