add chrome extention button
Former-commit-id: 467674ff64d9ecdc49d7a5e24e8e65f807524492 [formerly fb4f198ca1a766eeadf603e26fab93abd36e5a39] [formerly c3e9d2f97a8c6e17a6c15fba6f309d72e07e5882 [formerly 08cbce0b25aa6a0454619eef44051914163dc417]]
Former-commit-id: 82b0352f0efb2431533d88abaf589076d25d25ae [formerly 5c6eeced1079b6084ef8af5d4b2066a96506f13b]
Former-commit-id: d0c4dc4a039ad205d0d4f7203a72521e14ec7778

--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -246,6 +246,15 @@
 </div>
 </div>
 <div class="fixed-labelsCard visible-md visible-lg">
+  <div class="row margin-bottom-15 extention-card">
+  <div class="col-md-12">
+    <div class="portlet showCard fixedCard">
+      <div class="portlet-body">
+        <input type="submit"  ng-click="addNewtag(tag)" class="btn blue btn-block pull-right" value="Install chrome extention">
+      </div>
+    </div>
+  </div>
+  </div>
   <div class="row">
   <div class="col-md-12">
     <div class="portlet showCard fixedCard">
