install chrome extension process on leads page
Former-commit-id: d06e46236b4fe22ca4a2e55e160628129ed4998c [formerly db6da59d8da0106df278f11b97b05edfdcdd5dd0] [formerly ddb1e17978a9969d7e39ebfff54e4ce057bb2030 [formerly 9ef36b05d860ed2868c27a59d8d76981898c89b2]]
Former-commit-id: 3579a2e2a8f4163dfdfd74a70c6076cae9d07695 [formerly 5a50ca9b13801d57937eb5e29a5d256a2c871f31]
Former-commit-id: 945e4909e8bd2f10cc38913c105919a4adaea6e6

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,8 @@
   <meta content="" name="description"/>
   <meta content="" name="author"/>
   <meta name="MobileOptimized" content="320">
+  <link rel="chrome-webstore-item"
+    href="https://chrome.google.com/webstore/detail/eafcehcahfabjibkmffekmcnlnnopkni">
   <!-- BEGIN GLOBAL MANDATORY STYLES -->
   <link href="static/bootstrap3/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
  <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
