--- a/templates/live/welcome.html
+++ b/templates/live/welcome.html
@@ -583,7 +583,7 @@
                         <h3>Contact Us</h3>
                         <br>
                         <p>
-                            <i class="fa fa-envelope-o"></i> <a href="mailto:email@iogrow.com" class="white-link">email@iogrow.com</a>
+                            <i class="fa fa-envelope-o"></i> <a href="mailto:contact@iogrow.com" class="white-link">contact@iogrow.com</a>
                         </p>
                     </div>
 
