--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -246,11 +246,11 @@
 </div>
 </div>
 <div class="fixed-labelsCard visible-md visible-lg">
-  <div class="row margin-bottom-15 extention-card">
+  <div class="row margin-bottom-15 extention-card" ng-hide="extensionInstalled">
   <div class="col-md-12">
     <div class="portlet showCard fixedCard">
       <div class="portlet-body">
-        <input type="submit"  ng-click="addNewtag(tag)" class="btn blue btn-block pull-right" value="Install chrome extention">
+        <input  ng-click="installChromeExtension()" class="btn blue btn-block pull-right" value="Install chrome extension">
       </div>
     </div>
   </div>
