fix emails.send on leads page
Former-commit-id: cbc448f88b5435ee5a4c6e39324530c80a444381 [formerly 1ec965de06733ae23e226c733f6051f8a2d6a1a8] [formerly 1c6466d927b3c101bc4dfdabce1b15ae6984dc3b [formerly 70112671a9d131e513fee36c69b1ba26c8d5adc5]]
Former-commit-id: bfcb8be0a4b640d1e660c0608e3e0caf850bc110 [formerly 929a06ad74f5a8501d1e6d50b0ee14a716a7db1b]
Former-commit-id: dc8b76043e02fa7e325f2fb098378c8f429fe774

--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -361,7 +361,7 @@
                         <div class="news-blocks blank-card blank-card-red newsCard">
                           <h3>Story</h3>
                           <div class="news-block-tags">
-                
+
                          <div class="form-group row">
                             <label class="control-label col-md-4">Tagline</label>
                              <div class="col-md-8">
@@ -371,7 +371,7 @@
                            </div>
 
                           <div class="news-block-tags">
-                 
+
                             <div class="form-group row">
                                <label class="control-label col-md-4">Introduction</label>
                              <div class="col-md-8">
@@ -566,38 +566,39 @@
 
                       </div>
                 <!-- $ send email tab -->
-                <div class="tab-pane active" id="tab_1_8" ng-show="selectedTab == 8" style="display: none;">
-                        <div class="showPage">
-                         <div class="row">
-                           <div class="col-md-12 margin-bottom-10">
+                <div class="tab-pane active" id="tab_1_4" ng-show="selectedTab == 8">
+
+                         <div class="showPage">
+                           <div class="row">
+                             <div class="col-md-12  margin-bottom-10">
                           <p class⁼"lead"=""><strong>Send an Email to :</strong> </p>
-                          <form class="ng-pristine ng-invalid ng-invalid-required">
+                          <form  class="ng-pristine ng-valid">
                                             <div class="form-group">
-                                            <input required="" class="form-control ng-pristine ng-invalid ng-invalid-required" autofocus="" type="text" placeholder="To" id="messageSubject" ng-model="email.to">
+                                            <input required class="form-control ng-pristine ng-valid" autofocus type="text" placeholder="To" id="messageSubject" ng-model="email.to">
                                             </div>
                                             <div class="form-group">
-                                            <input class="form-control ng-pristine ng-valid" autofocus="" type="text" placeholder="CC" id="messageSubject" ng-model="email.cc">
+                                            <input class="form-control ng-pristine ng-valid" autofocus type="text" placeholder="CC" id="messageSubject" ng-model="email.cc">
                                             </div>
                                             <div class="form-group">
-                                            <input class="form-control ng-pristine ng-valid" autofocus="" type="text" placeholder="BCC" id="messageSubject" ng-model="email.bcc">
+                                            <input class="form-control ng-pristine ng-valid" autofocus type="text" placeholder="BCC" id="messageSubject" ng-model="email.bcc">
                                             </div>
                                             <div class="form-group">
-                                             <input required="" class="form-control ng-pristine ng-invalid ng-invalid-required" autofocus="" type="text" placeholder="Add a subject" id="messageSubject" ng-model="email.subject">
+                                             <input  required class="form-control ng-pristine ng-valid" autofocus type="text" placeholder="Add a subject" id="messageSubject" ng-model="email.subject">
                                              </div>
                                             <div class="form-group">
-                                            <ul class="wysihtml5-toolbar ng-pristine ng-valid" style=""><li class="dropdown"><a class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="#"><i class="icon-font"></i>&nbsp;<span class="current-font">Normal text</span>&nbsp;<b class="caret"></b></a><ul class="dropdown-menu"><li><a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="div" tabindex="-1" href="javascript:;" unselectable="on">Normal text</a></li><li><a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="h1" tabindex="-1" href="javascript:;" unselectable="on">Heading 1</a></li><li><a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="h2" tabindex="-1" href="javascript:;" unselectable="on">Heading 2</a></li><li><a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="h3" tabindex="-1" href="javascript:;" unselectable="on">Heading 3</a></li><li><a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="h4" href="javascript:;" unselectable="on">Heading 4</a></li><li><a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="h5" href="javascript:;" unselectable="on">Heading 5</a></li><li><a data-wysihtml5-command="formatBlock" data-wysihtml5-command-value="h6" href="javascript:;" unselectable="on">Heading 6</a></li></ul></li><li><div class="btn-group"><a class="btn" data-wysihtml5-command="bold" title="CTRL+B" tabindex="-1" href="javascript:;" unselectable="on">Bold</a><a class="btn" data-wysihtml5-command="italic" title="CTRL+I" tabindex="-1" href="javascript:;" unselectable="on">Italic</a><a class="btn" data-wysihtml5-command="underline" title="CTRL+U" tabindex="-1" href="javascript:;" unselectable="on">Underline</a></div></li><li><div class="btn-group"><a class="btn" data-wysihtml5-command="insertUnorderedList" title="Unordered list" tabindex="-1" href="javascript:;" unselectable="on"><i class="icon-list"></i></a><a class="btn" data-wysihtml5-command="insertOrderedList" title="Ordered list" tabindex="-1" href="javascript:;" unselectable="on"><i class="icon-th-list"></i></a><a class="btn" data-wysihtml5-command="Outdent" title="Outdent" tabindex="-1" href="javascript:;" unselectable="on"><i class="icon-indent-right"></i></a><a class="btn" data-wysihtml5-command="Indent" title="Indent" tabindex="-1" href="javascript:;" unselectable="on"><i class="icon-indent-left"></i></a></div></li><li><div class="bootstrap-wysihtml5-insert-link-modal modal fade"><div class="modal-dialog"><div class="modal-content"><div class="modal-header"><a class="close" data-dismiss="modal">×</a><h3>Insert link</h3></div><div class="modal-body"><input value="http://" class="bootstrap-wysihtml5-insert-link-url form-control"><label class="checkbox"> <input type="checkbox" class="bootstrap-wysihtml5-insert-link-target" checked="">Open link in new window</label></div><div class="modal-footer"><a href="#" class="btn" data-dismiss="modal">Cancel</a><a href="#" class="btn btn-primary" data-dismiss="modal">Insert link</a></div></div></div></div><a class="btn" data-wysihtml5-command="createLink" title="Insert link" tabindex="-1" href="javascript:;" unselectable="on"><i class="icon-share"></i></a></li><li><div class="bootstrap-wysihtml5-insert-image-modal modal fade"><div class="modal-dialog"><div class="modal-content"><div class="modal-header"><a class="close" data-dismiss="modal">×</a><h3>Insert image</h3></div><div class="modal-body"><input value="http://" class="bootstrap-wysihtml5-insert-image-url form-control"></div><div class="modal-footer"><a href="#" class="btn" data-dismiss="modal">Cancel</a><a href="#" class="btn btn-primary" data-dismiss="modal">Insert image</a></div></div></div></div><a class="btn" data-wysihtml5-command="insertImage" title="Insert image" tabindex="-1" href="javascript:;" unselectable="on"><i class="icon-picture"></i></a></li></ul><textarea id="some-textarea" class="form-control ng-pristine ng-valid" rows="7" ng-model="email.body" placeholder="Enter text ..." style="display: none;"></textarea><input type="hidden" name="_wysihtml5_mode" value="1">
+                                            <textarea id="some-textarea" placeholder="Enter text ..." id="noteBody" class="form-control ng-pristine ng-valid" rows="7" ng-model="email.body"></textarea>
                                              </div>
                                          <div class="pull-right">
 
-                                            <input ng-click="sendEmail(email)"  ng-disabled="isLoading" type="submit" class="btn green" value="Send">
+                                            <input   ng-click="sendEmail(email)" ng-disabled="isLoading" type="submit" class="btn green" value="Send">
 
 
                                           </div>
-                                        </form>
-                                       </div>
-                                      </div>
-                                    </div>
-                </div>
+                            </form>
+                          </div>
+                        </div>
+                      </div>
+                  </div>
               </div>
             </div>
           </div>
