adding play button to welcome page
Former-commit-id: 2233c8067b28588caf01d12d9571da83edb4866f [formerly d82450911e3d5caa44717c8d06d8fbef20a9b622] [formerly 25d0ddd72e771268a3e768c5d379eb8156f4baa6 [formerly 90c40077a7f6e975eb926f3de22f6b7e813d6207]]
Former-commit-id: 8e88edf6fc66ed78e59afcaaa4a0201ca8f50ad6 [formerly af2370bcc79b570f9eb41328a641d38211bc71c8]
Former-commit-id: 6facc30e92688a89214fab2984d7a1007018b70b

--- a/static/welcome/css/style.css
+++ b/static/welcome/css/style.css
@@ -603,5 +603,10 @@ a:after {
   }
 
 }
-
+.playImg{
+  width: 64px;
+  position: absolute;
+  top: calc(50% - 23px);
+  left: calc(50% - 36px);
+}
 /***********************custom****/
