--- a/templates/live/welcome.html
+++ b/templates/live/welcome.html
@@ -439,7 +439,7 @@
                       border: 1px solid rgb(207, 201, 201);
                       padding: 3px;
                       -webkit-box-shadow: 4px 9px 16px -4px rgba(163,160,163,1); -moz-box-shadow: 4px 9px 16px -4px rgba(163,160,163,1); box-shadow: 4px 9px 16px -4px rgba(163,160,163,1);
-                  "> </a>
+                  "> </a><a href="/static/welcome/img/mark_as_lead.gif" data-lightbox="image-1" data-title="My caption"><img class="img-responsive playImg" src="/static/img/play.png" alt=""></a>
                     </div>
 
                     <div class="col-lg-6 features-description">
@@ -483,7 +483,7 @@
     border: 1px solid rgb(207, 201, 201);
     padding: 3px;
     -webkit-box-shadow: 4px 9px 16px -4px rgba(163,160,163,1); -moz-box-shadow: 4px 9px 16px -4px rgba(163,160,163,1); box-shadow: 4px 9px 16px -4px rgba(163,160,163,1);
-"> </a>
+"> </a><a href="/static/welcome/img/instant_access.gif" data-lightbox="image-1" data-title="My caption"><img class="img-responsive playImg" src="/static/img/play.png" alt=""></a>
                     </div>
 
                 </div>
@@ -502,7 +502,7 @@
     border: 1px solid rgb(207, 201, 201);
     padding: 3px;
     -webkit-box-shadow: 4px 9px 16px -4px rgba(163,160,163,1); -moz-box-shadow: 4px 9px 16px -4px rgba(163,160,163,1); box-shadow: 4px 9px 16px -4px rgba(163,160,163,1);
-"> </a>
+"> </a><a href="/static/welcome/img/clear_concise.gif" data-lightbox="image-1" data-title="My caption"><img class="img-responsive playImg" src="/static/img/play.png" alt=""></a>
                     </div>
 
                     <div class="col-lg-6 features-description">
@@ -545,7 +545,7 @@
     border: 1px solid rgb(207, 201, 201);
     padding: 3px;
     -webkit-box-shadow: 4px 9px 16px -4px rgba(163,160,163,1); -moz-box-shadow: 4px 9px 16px -4px rgba(163,160,163,1); box-shadow: 4px 9px 16px -4px rgba(163,160,163,1);
-"> </a>
+"> </a><a href="/static/welcome/img/neatly.gif" data-lightbox="image-1" data-title="My caption"><img class="img-responsive playImg" src="/static/img/play.png" alt=""></a>
                     </div>
 
                 </div>
