Display gif on blankstae lead
Former-commit-id: 94746ecedaf6155c22f15a78fd6db1f1ec7a5cbc [formerly 550b6f058b8426e6d389d43625e4647a312eb9fe] [formerly ff8ea95b7287711e6b009e371b8aa0755d6f2205 [formerly abe72d12de44cadb2f8ebbc76cb6c86e32184533]]
Former-commit-id: d3943d0379893513bd2395c4f5df62d372b22778 [formerly 4e5b4a202583d43c21d576187e25bc8338b4cbf7]
Former-commit-id: 4b0d6970ab89bdfb802b58c8e9a71a10d9b4cba0

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,8 +11,7 @@
   <meta content="" name="description"/>
   <meta content="" name="author"/>
   <meta name="MobileOptimized" content="320">
-  <link rel="chrome-webstore-item"
-    href="https://chrome.google.com/webstore/detail/eafcehcahfabjibkmffekmcnlnnopkni">
+  <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/eafcehcahfabjibkmffekmcnlnnopkni">
   <!-- BEGIN GLOBAL MANDATORY STYLES -->
   <link href="static/bootstrap3/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
  <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
@@ -101,6 +100,9 @@
         <!-- BEGIN TOP NAVIGATION MENU -->
 
         <ul class="nav navbar-nav pull-right">
+              <li class="dropdown user">
+                  <input type="submit" onclick="$('#InstallChromeExtension').modal() " class="btn blue btn-block pull-right" value="Install chrome extension" style="padding-left:5px;padding-right:5px;">
+              </li>
               <li class="dropdown user">
                 <a href="/#/admin/users" class="dropdown-tog" target="new">
                   <span class="username">
@@ -233,7 +235,42 @@
                </div>
             </div>
 </div>
+<div id="InstallChromeExtension" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+ <div class="modal-dialog">
+ <div class="modal-content">
+ <div class="modal-header">
+   <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+   <h3 id="myModalLabel" class="modal-title">{{_("Capture leads from your Social networks")}}</h3>
+ </div>
 
+ <div class="modal-body">
+    <form id="editSetting" name="edittag" class="form-horizontal">
+
+
+     <div class="form-group">
+           <p>If you are looking to build a potential network of contacts,
+             it's not just a matter of adding them manually,
+             you can do better! Use the free Google Chrome extension that allows you to add people right from Linkedin, Twitter and Gmail in one click.
+             Keep the experience you know and connect with the people you need
+           </p>
+
+           <div class="col-md-12">
+
+             <center>
+                 <img src="http://www.iogrow.com/static/welcome/img/mark_as_lead.ooold.gif" style="width:100%;">
+              </center>
+
+           </div>
+       </div>
+ </div>
+ <div class="modal-footer">
+
+   <button  type="submit"  onclick="chrome.webstore.install()" class="btn blue btn-block pull-right">{{_("Install Chrome Extension")}} </button>
+ </div>
+  </form>
+  </div>
+  </div>
+</div>
   <div class="modal fade"  id="errorModal"  tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
@@ -354,12 +391,12 @@
 
 
 
-         //var ROOT = '/_ah/api';
+        var ROOT = '/_ah/api';
 
 
 
 
-       var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+     //   var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
         var callback = function() {
