--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -157,19 +157,10 @@
           <div class="">
             <div class="blank_slate_arrow"></div>
             <div class="thumbnail blank_slate_body">
-           <div class="col-lg-12">
-                                    <a ng-click="showConvertModal()" data-lightbox="image-1" data-title="My caption"><img class="img-responsive" src="/static/welcome/img/instant_access.png" alt="" style="
-    width: 430px;
-    /* border: 2px #333 !important; */
-    border: 1px solid rgb(207, 201, 201);
-    padding: 3px;
-    -webkit-box-shadow: 4px 9px 16px -4px rgba(163,160,163,1); -moz-box-shadow: 4px 9px 16px -4px rgba(163,160,163,1); box-shadow: 4px 9px 16px -4px rgba(163,160,163,1);
-"> </a><a ng-click="showConvertModal()" data-lightbox="image-1" data-title="My caption"><img class="img-responsive playImgLead" src="/static/img/play.png" alt=""></a> <br>
- <p class="lead">
+              <img class="img-responsive" src="/static/img/leads_blank.png">
+              <p class="lead">
                 {{ _('You have leads coming in from a wide variety of sources. Some leads come from lists you acquired, others from business cards and still more from the "contact us" form on your website. i/oGrow help you organize informations about leads so they can be followed up on and qualified quickly.') }}
-              </p></div>
-
-             
+              </p>
             </div>
           </div>
         </div>
@@ -253,6 +244,15 @@
 </div>
 </div>
 <div class="fixed-labelsCard visible-md visible-lg">
+  <div class="row margin-bottom-15 extention-card" ng-hide="extensionInstalled">
+  <div class="col-md-12">
+    <div class="portlet showCard fixedCard">
+      <div class="portlet-body">
+        <input  type="submit" ng-click="installChromeExtension()" class="btn blue btn-block pull-right" value="Install chrome extension">
+      </div>
+    </div>
+  </div>
+  </div>
   <div class="row">
   <div class="col-md-12">
     <div class="portlet showCard fixedCard">
@@ -309,39 +309,6 @@
         </div>
       </div>
     </div>
-  </div>
-  </div>
-</div>
-<!-- Convert Modal -->
- <div id="LeadsShow" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
- <div class="modal-dialog">
- <div class="modal-content">
- <div class="modal-header">
-   <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-   <h3 id="myModalLabel" class="modal-title">{{_("Manage easly your leads")}}</h3>
- </div>
-
- <div class="modal-body">
-    <form id="editSetting" name="edittag" class="form-horizontal">
-
-
-     <div class="form-group">
-         
-
-           <div class="col-md-12">
-
-             <center>
-                 <img src="/static/welcome/img/instant_access.gif" style="width:100%;">
-              </center>
-
-           </div>
-       </div>
- </div>
- <div class="modal-footer">
-
-   
- </div>
-  </form>
   </div>
   </div>
 </div>
