inline edit on title note show page ,fix#570
Former-commit-id: dbbdcb39bb4264a07759a9fa540539b69e94b175 [formerly 087afc399a80c5aec253e0f1f943511b763a5c7a] [formerly c6cc24a81121c39262391ec26a82f6889db0c8b0 [formerly 43d08aefaaba0bd26ec86cb29355c863f2679320]]
Former-commit-id: 628f3f23f27d54d5cffc69419b5cd6ad60b16907 [formerly 00386cb3b4a3a8ccc519383fa5310de41237cee7]
Former-commit-id: ddffccf5650a34fd414e16257135f4a4a9ec5783

--- a/templates/accounts/note_show.html
+++ b/templates/accounts/note_show.html
@@ -52,7 +52,11 @@
             </a>
           </i>
         </span>
-        <h2 class="note-title"><%= note.title%></h2>
+        <h2 class="note-title">
+          <a  editable-text=" note.title" onbeforesave="inlinePatch('Note','', 'title',note.id,$data)">
+            <%= note.title%>
+          </a>
+        </h2>
         <p>Posted by <%=note.created_by.display_name%></p>
 
         <div class="row margin-bottom-10">
