working articles.get api
Former-commit-id: 1f3e8c2f4b8642f9e55544b3dc08c1994aefad27 [formerly aedd28c3157df14c5e130732fcfe413af3d53ca5] [formerly 67b3d926d856672272227025fd88190083ae3252 [formerly e7a1a503c926f02cce7fd88486902ab2adb3efdc]]
Former-commit-id: 6f4cabc7f471d6c1a61022489f8794110dd9d588 [formerly 08049fc944b1a84cc410e400f9522e57e10f80a6]
Former-commit-id: 75ede39b7cede5aea0bf97b2c2b28ee371b283d8

--- a/templates/articles/article_list.html
+++ b/templates/articles/article_list.html
@@ -76,7 +76,7 @@
     <div class="row ">
     <div class="tab-pane">
     <div class="row ">
-      <div class="col-md-12 waterfall" ng-hide="blankStateArticle">
+      <div class="col-md-12" ng-hide="blankStateArticle">
         <div ng-repeat="article in articles" droppable  id="card_<%=$index%>"class="cardElement" ng-drop="dropTag(lead,$index)">
           <div class="detailsSection">
             <div class="head">
@@ -88,7 +88,7 @@
               </div>
               <div class="text">
                 <div class="name">
-                  <a href="/#/articles/show/<%= article.id %>" class="profile-link">
+                  <a href="/blog#/articles/<%= article.id %>" class="profile-link">
                     <%= article.title %>
                   </a>
                 </div>
@@ -292,10 +292,10 @@
     }
     handleUniform();
 
-    $('.waterfall').waterfall({
-        colMinWidth: 300,
-        defaultContainerWidth: 800,
-        autoresize: true
-      });
+    // $('.waterfall').waterfall({
+    //     colMinWidth: 300,
+    //     defaultContainerWidth: 800,
+    //     autoresize: true
+    //   });
 $('.textfill').textfill({debug: true, maxFontPixels: 16});
 </script>
