--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -180,7 +180,7 @@
                             <textarea id="noteBody" class="form-control ng-pristine ng-valid" rows="3" ng-model="note.content"></textarea>
                           </div>
                           <div class="pull-right">
-                            <input ng-disabled="isLoading" ng-click="addNote(note)"  type="submit" class="btn green" value="Add this note">
+                            <input ng-disabled="isLoading || !note.title" ng-click="addNote(note)"  type="submit" class="btn green" value="Add this note">
                           </div>
                         </form>
                       </div>
@@ -1308,20 +1308,17 @@
             </div>
           </div>
  <!--HKA 11.10.2013 Edit Lead -->
-             <div id="EditLeadModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div id="EditLeadModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 
-              <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                 <h3 id="myModalLabel" class="modal-title">{{_("Edit Lead")}}</h3>
-              </div>
-
-              <div class="modal-body">
-                 <form id="editLead" name="editlead"  class="form-horizontal">
-
-
-                  <div class="form-group">
+            </div>
+            <div class="modal-body">
+                <form id="editLead" name="editlead"  class="form-horizontal">
+                    <div class="form-group">
                         <label  class="required col-md-3 control-label">{{_("First Name")}} *</label>
 
                         <div class="col-md-9">
@@ -1388,21 +1385,16 @@
                              </select>
                           </div>
                     </div>
-
-
-
-
-
-              </div>
-              <div class="modal-footer">
-                <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Close")}}</button>
-                <button  type="submit" ng-click="updatelead(lead)" class="btn btn-primary addContactNow">{{_("Save")}} </button>
-              </div>
-               </form>
-               </div>
-          </div>
-              </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                    <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Close")}}</button>
+                    <button  type="submit" ng-click="updatelead(lead)" class="btn btn-primary addContactNow">{{_("Save")}} </button>
+            </div>
         </div>
+    </div>
+</div>
+</div>
 
 
 
@@ -1531,7 +1523,10 @@
                                                   </div>
                                                 </div>
                                                     <input class="form-control" autofocus="" type="text" placeholder="{{_('Where?')}}" id="taskTitle" ng-model="ioevent.where">
+                            </form>
                                                 </div>
+
+
             </div>
             <div class="modal-footer">
               <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
@@ -1539,7 +1534,7 @@
                <input ng-hide="isLoading" ng-click="addEvent(ioevent)" type="submit" class="btn green" value="{{_('Add this event')}}">
                 <!--input ng-show="isLoading" type="submit" class="btn green" value="{{_('Loading...')}}" disabled-->
 
-            </form>
+           
             </div>
             </div>
             </div>
