before pull from iogrow
Former-commit-id: c9aeca69f1add50e7220081985ce03150d2def88 [formerly 68454684c2f1e4a1e4d033f3f5dbc755213852d9] [formerly ff9825dfc2fab6791178819fe5e738a114301489 [formerly 809b9bb02bfd963a00f8d81a0b4ac9b34f06684c]]
Former-commit-id: bba4b4c73438ce1168b6c0106cc0571de452843e [formerly c6fefb25d9734830e713fcebbb715dd40d4fa836]
Former-commit-id: 2374a548f2bfcec7e326636757344d4cf4fe7d21

--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -249,6 +249,7 @@
     </div>
       <!-- END PAGE CONTAINER-->
 </div>
+</div>
       <div class="fixed-labelsCard visible-md visible-lg">
       <div class="row">
       <div class="col-md-12">
