Disable the button Add comment on All page if the title is empty , fix #590
Former-commit-id: c334ba3f1466021f2770d884c920dc4d9839d95c [formerly 8286aeb2655733b8d23176195cfba2dee467aa35] [formerly 5dc0e38742983ee41834f3268c539fd3170198c1 [formerly 7f3e4f26231cd7733438bfd16cb7909858c057b3]]
Former-commit-id: 6790f8e14b93c6d60f250193097cb47a6876a59d [formerly 1a108a17c0c4d87f717879f7ec6bdabd2813c241]
Former-commit-id: ec5449a118fb23717a6de5f9f14037ce95e3add3

--- a/templates/activities/event_show.html
+++ b/templates/activities/event_show.html
@@ -171,8 +171,8 @@
 
                        <div class="pull-right">
 
-                        <input ng-hide="isLoading" ng-click="addComment(comment)" type="submit" class="btn green" value="Add comment">
-                        <input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled>
+                        <input ng-disabled="isLoading || !comment.content" ng-click="addComment(comment)" type="submit" class="btn green" value="Add comment">
+                       
                         </div>
                                   <div class="clearfix"></div>
                   </form>
