fix a bug on leads.list api
Former-commit-id: a6fe3c793d72e0f8d86e8ec619ca063f0710f533 [formerly af8d896f203bcbd185fc0c914c6828832f5e78e6] [formerly 77a7a8df98b584f2541c700324c66cc09de378ab [formerly e4b83430f9557ac94767d25f1c997041bdf04884]]
Former-commit-id: 9e39cb1b84003702ed7e04b27b8852a942f0f412 [formerly 9b8c95ee11b0684ca503033a95f40a2e7e510875]
Former-commit-id: 3b0de13d641c4fbceda2f278f8c67f2614a94e3d

--- a/templates/blog/blog_base.html
+++ b/templates/blog/blog_base.html
@@ -309,7 +309,7 @@
         <!-- BEGIN SIDEBAR MENU -->
         <ul class="page-sidebar-menu">
 
-              <li id="id_Account" class="start active">
+              <li id="id_Articles" class="start active">
                 <a href="/blog#/articles" data-toggle="collapse" data-target=".navbar-collapse">
 
                 <span class="title">
